--- a/templates/base/components/input/layout.html.twig
+++ b/templates/base/components/input/layout.html.twig
@@ -2,7 +2,8 @@
 {% endblock %}
 {% block iboInput %}
     <input type="{{ oUIBlock.GetType() }}" id="{{ oUIBlock.GetId() }}" name="{{ oUIBlock.GetName() }}" value="{{ oUIBlock.GetValue()|raw }}"
-           class="{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}"
-           {% if oUIBlock.IsChecked() %}checked="checked"{% endif %}
+            class="{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}{% if oUIBlock.GetAdditionalCSSClassesAsString() %} {{ oUIBlock.GetAdditionalCSSClassesAsString() }}{% endif %}"
+            {% if oUIBlock.IsChecked() %} checked="checked"{% endif %}
+            {% if oUIBlock.IsDisabled() %} disabled{% endif %}
     >
 {% endblock %}
