--- a/templates/base/components/title/layout.html.twig
+++ b/templates/base/components/title/layout.html.twig
@@ -1,7 +1,7 @@
 {% apply spaceless %}
     <div id="{{ oUIBlock.GetId() }}" class="ibo-title {% if oUIBlock.HasIcon() %}ibo-has-icon{% endif %}{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}">
         {% if oUIBlock.HasIcon() %}
-            <div class="ibo-title--medallion">
+            <div {% if oUIBlock.IsMedallion %}class="ibo-title--medallion"{% endif %}>
                 <img class="ibo-title--icon ibo-title--icon--must-{{ oUIBlock.GetIconCoverMethod() }}" src="{{ oUIBlock.GetIconUrl() }}">
             </div>
         {% endif %}
