--- a/css/backoffice/main.scss
+++ b/css/backoffice/main.scss
@@ -15,6 +15,7 @@
  *
  * You should have received a copy of the GNU Affero General Public License
  */
+$approot-relative: '../../../../' !default;
 
 @import "utils/all";
 @import "vendors/all";
