--- a/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
+++ b/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
@@ -3,7 +3,7 @@
 
 {% apply spaceless %}
 
-    {% UIContentBlock Standard {'aContainerClasses': ['ibo-update-core'], 'display_block', 'display-files']} %}
+    {% UIContentBlock Standard {'aContainerClasses': ['ibo-update-core', 'display_block', 'display-files']} %}
 
         {% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:Progress'|dict_s, 'sId':'installation_progress'} %}
             {#  Todo 3.0 Add Progress bar UIBlock  #}
