--- a/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
+++ b/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
@@ -62,7 +62,7 @@
             {% EndUIContentBlock %}
 
             {% UIForm Standard {'CSSClasses':['form-inline']} %}
-                {% UIButton ForPrimaryAction {'sLabel':'iTopUpdate:UI:Continue'|dict_s, 'sId':'setup_continue', 'bIsSubmit':true, 'IsDisabled':false} %}
+                {% UIButton ForPrimaryAction {'sLabel':'iTopUpdate:UI:Continue'|dict_s, 'sId':'setup_continue', 'bIsSubmit':true, 'IsDisabled':true} %}
             {% EndUIForm %}
 
         {% EndUIFieldSet %}
