--- a/templates/base/components/button/layout.html.twig
+++ b/templates/base/components/button/layout.html.twig
@@ -8,7 +8,7 @@
         type="{{ oUIBlock.GetType() }}"
         name="{{ oUIBlock.GetName() }}"
         value="{{ oUIBlock.GetValue() }}"
-        {% if oUIBlock.IsDisabled() is same as(true) %} disabled {% endif %}
+        {% if oUIBlock.IsDisabled() %} disabled {% endif %}
         {% if oUIBlock.GetTooltip() is not empty %} data-tooltip-content="{{ oUIBlock.GetTooltip() }}" {% endif %}
 >
     {% if oUIBlock.GetIconClass() is not empty %}
