--- a/templates/base/layouts/activity-panel/caselog-entry-form/layout.html.twig
+++ b/templates/base/layouts/activity-panel/caselog-entry-form/layout.html.twig
@@ -1,6 +1,9 @@
 <form id="{{ oUIBlock.GetId() }}"
       class="ibo-caselog-entry-form {% if oUIBlock.IsSubmitAutonomous %}ibo-is-closed{% endif %}"
       data-role="ibo-caselog-entry-form"
+      data-object-class="{{ oUIBlock.GetObjectClass() }}"
+      data-object-id="{{ oUIBlock.GetObjectId() }}"
+      data-attribute-code="{{ oUIBlock.GetAttCode() }}"
       data-submit-mode="{{ oUIBlock.GetSubmitMode() }}"
       method="post">
 	<div class="ibo-caselog-entry-form--text-input" data-role="ibo-caselog-entry-form--text-input">
